# whyqd

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  docs-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: action_api.rst  changelog.md  citation.rst  conf.py  contributing.md  contributing.rst  index.md  index.rst  installation.md  installation.rst  method.rst  morph_tutorial.rst  quickstart.md  roadmap.rst  schema.rst  schema_api.rst  tutorial.rst  tutorial_local_government_data.rst  validate.rst  validate_api.rst
docs/_build/doctrees/: action_api.doctree  citation.doctree  contributing.doctree  environment.pickle  field_api.doctree  index.doctree  installation.doctree  (+13 more)
docs/actions/: calculate.md  categorise.md  collate.md  deblank.md  dedupe.md  delete_rows.md  new.md  pivot_categories.md  pivot_longer.md  rename.md  select.md  select_newest.md  select_oldest.md  separate.md  unite.md
docs/api/: action.md  base.md  basecrud.md  crosswalk.md  datasource.md  field.md  schema.md  transform.md
docs/strategies/: crosswalk.md  curation.md  datasource.md  schema.md
docs/tutorials/: tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/changelog/: index.html
site/contributing/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: test_action.json  test_action.py  test_crosswalk.py  test_datasource.py  test_field.py  test_method.json  test_method.py  test_morph.py  test_schema.json  test_schema.py  test_tutorial_1.py  test_tutorial_2.py  test_tutorial_3.py  test_tutorial_4.py  test_validate.py
tests/data/: 1e5a165d-5e83-4eec-9781-d450a1d3f5f1.XLSX  2023-05-09-human-development-report-interim.PARQUET  695528c5-ef40-49a2-8654-e2d1b198310c.xlsx  HDR-2007-2008-Table-03.xlsx  a102c00a-9066-44bc-a9e7-3f3413e146c9.xlsx  cba7e0f7-8b85-4f21-adde-c1b6d2dfda2c.XLSX  complex_test_method.json  eceb313a-8d11-4e77-a08a-e758bdb9ec39.xlsx  f2b4d538-280c-4ae5-8fc5-cb49258cb180.xlsx  method_E06000044_014.json  output_aad2a0f0-7b6d-4b63-9a2c-1e7e1340cae0.xlsx  raw-e07000066-tutorial-4.xlsx  raw_E06000044_014_0.XLSX  raw_E06000044_014_0.data  raw_duplicated_E06000044_014.xlsx  raw_multi_E06000044_014.xlsx  restructured_test_data.xlsx  source_E06000044_014.xlsx  test_basildon_destination.schema  test_basildon_source.data  test_basildon_source.schema  test_crosswalk.crosswalk  test_cthulu_destination.schema  test_cthulu_interim.data  test_cthulu_interim.schema  test_cthulu_source.data  test_cthulu_source.schema  test_data.csv  test_derived_schema.schema  test_method.json  test_method_no_uuid.json  test_portsmouth_destination.schema  test_portsmouth_source.data  test_portsmouth_source.schema  test_schema.json  test_schema.schema  test_source_schema.schema  tutorial-5-fairtracks-convenience-schema.SCHEMA  tutorial-5-metadata-49-diatom-protein-coding-gene-annotations.xlsx  urban_population.json  (+3 more)
whyqd/: __init__.py  __main__.py  cli.py  common.py  config.py
whyqd/action/: __init__.py  assign_category_booleans.py  assign_category_uniques.py  calculate.py  categorise.py  deblank.py  dedupe.py  delete_columns.py  delete_rows.py  filter_after.py  filter_before.py  filter_latest.py  join.py  merge.py  new.py  order.py  order_new.py  order_old.py  pivot_categories.py  pivot_longer.py  rebase.py  rename.py  rename_all.py  rename_new.py  split.py
whyqd/base/: __init__.py  action_base.py  category_base.py  filter_base.py  morph_base.py
whyqd/config/: ray_init.py  settings.py
whyqd/core/: __init__.py  action.py  base.py  common.py  crosswalk.py  datasource.py  morph.py  schema.py  transform.py
whyqd/crud/: __init__.py  action.py  base.py  field.py
whyqd/dtypes/: __init__.py  field.py  mime.py  status.py
whyqd/method/: __init__.py  action.py  method.py  original_method.py  test_morph.py  transform.py
whyqd/models/: __init__.py  action_category.py  action_morph.py  action_morph_model.py  action_schema.py  action_schema_model.py  actionscript.py  category.py  citation.py  citation_model.py  column.py  column_model.py  constraints.py  constraints_model.py  crosswalk.py  datasource.py  datasource_model.py  fields.py  fields_model.py  method_model.py  modifier.py  modifier_model.py  schema.py  schema_model.py  transform.py  version.py  version_model.py
whyqd/morph/: __init__.py  categorise.py  deblank.py  dedupe.py  delete.py  melt.py  rebase.py  rename.py
whyqd/parsers/: __init__.py  action.py  action_parser.py  category.py  category_parser.py  core.py  core_parser.py  datasource.py  filter_parser.py  legacy_parser.py  method_parser.py  morph.py  morph_parser.py  script.py  script_parser.py  wrangling_parser.py
whyqd/schema/: __init__.py  field.py  old_fields.py  schema.py
whyqd/settings/: default_actions.json  default_fields.json  default_filters.json
whyqd/types/: mime_types.py  status_types.py
whyqd/utilities/: hashing.py
whyqd/validate/: validate.py
(+147 files in other folders)
