[tool.poetry]
name = "whyqd"
version = "0.6.0"
description = "data wrangling simplicity, complete audit transparency, and at speed"
authors = ["Gavin Chait <gchait@whythawk.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://whyqd.com"
repository = "https://github.com/whythawk/whyqd/"
documentation = "https://whyqd.readthedocs.io/"
keywords = ["python", "data-science", "pandas", "open-data", "open-science", "data-analysis", "data-wrangling", "data-management", "munging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
	"License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
include = [
    "whyqd/VERSION",
    "tests/data/*"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "^1.21.1"
openpyxl = "^3.0.7"
pandas = "^1.3.1"
xlrd = "^2.0.1"
pydantic = "^1.8.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.1"
pytest = "^6.2.4"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py38"]

[tool.poetry.extras]
docs = ["Sphinx"]