[tool.poetry]
name = "whyqd"
version = "1.2.5"
description = "data wrangling simplicity, complete audit transparency, and at speed"
authors = ["Gavin Chait <gchait@whythawk.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://whyqd.com"
repository = "https://github.com/whythawk/whyqd/"
documentation = "https://whyqd.readthedocs.io/"
keywords = ["python", "data-science", "pandas", "open-data", "open-science", "data-analysis", "data-wrangling", "data-management", "munging", "crosswalks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
	"License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
include = [
    "whyqd/VERSION",
    "tests/data/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.21.1"
openpyxl = ">=3.0.7"
pandas = ">=1.5.2"
xlrd = ">=2.0.1"
pydantic = ">=1.8.2"
tabulate = ">=0.8.9"
ray = ">=2.2.0"
modin = ">=0.25.1"
randomname = ">=0.2.1"
pyarrow = ">=11.0.0"
setuptools = ">=67.7.2"
python-dotenv = ">=1.0.0"
grpcio = ">=1.59.3"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
flake8 = ">=6.0.0"
pytest = ">=7.2.2"
jupyterlab = ">=3.6.1"

[tool.poetry.group.docs.dependencies]
markdown = ">=3.5.2"
mkdocs = ">=1.5.3"
pymdown-extensions = ">=10.7.1"
paginate = ">=0.5.6"
mkdocs-exclude = ">=1.0.2"
mkdocstrings-python = ">=1.8.0"
mkdocs-redirects = ">=1.2.1"
mkdocs-material = ">=9.5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.poetry.extras]
docs = ["MKDocs"]